Improvements to Batch Export
- Batch Export now has an option to “Ignore Background Tasks Warning”.
- Added support for variables in Batch Export Custom Filename.
- Removed legacy code from `ExportDialog`.
- Added `cp.apple.finalcutpro:backgroundTasksDialog()`.
- Updated `cp.just` documentation.
- Closes #1534
- Closes #1523

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -110,6 +110,7 @@
         "bassReduce9": "Bass -",
         "batchExport": "Batch Export",
         "batchExportActiveTimeline": "Batch Export Active Timeline",
+        "batchExportBackgroundTasksDetected": "Incomplete background tasks were detected, which has aborted the Batch Export.\n\nBackground tasks can be ignored via the Batch Export Preferences if required.",
         "batchExportComplete": "Batch Export is now complete.\n\nThe selected clips have been added to your Final Cut Pro export queue.",
         "batchExportCompressorComplete": "Batch Export is now complete.\n\nThe selected clips have been added to your Compressor Batch ready for processing.",
         "batchExportDestinationDisabled": "The Target destination you have selected is disabled in the menubar, which has aborted the Batch Export.\n\nPlease try again.",
@@ -598,7 +599,7 @@
         "enableWaveformDrawing": "Enable Waveform Drawing",
         "end": "End",
         "english": "English",
-        "enterCustomFilename": "Please enter a custom filename",
+        "enterCustomFilename": "Please enter a custom filename below.\n\nYou can also use these optional variables:\n\n{original} = Original Clip Name\n{yyyy} = Year\n{yy} = Year\n{mm} = Month\n{dd} = Day\n{hh} = Hour\n{mm} = Minutes\n{ss} = Seconds",
         "enterCustomFilenameError": "This filename looks invalid. Please try again.",
         "enterFinderTag": "Please enter the Finder Tag you want to use:",
         "enterFinderTagError": "This Finder Tag looks invalid.\n\nPlease try again.",
@@ -915,6 +916,7 @@
         "highlights4": "Hlgt",
         "histogram": "Histogram",
         "historyIsEmpty": "History is empty",
+        "holdDownShortcutKeyToRepeatAction": "Hold down shortcut key to repeat action.",
         "horizontal": "Horizontal",
         "horizontal4": "Horz",
         "horizontalTimelineScroll": "Horizontal Timeline Scroll",
@@ -930,6 +932,7 @@
         "icon": "Icon",
         "identification": "Identification",
         "ignore": "Ignore",
+        "ignoreBackgroundTasks": "Ignore Background Tasks Warning",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "Ignore ESC Key when Final Cut Pro is Fullscreen",
         "ignoreInsertedCameraCards": "Ignore Inserted Camera Cards",
         "ignoreInvalidCaptions": "Ignore Invalid Captions Warning",
@@ -985,7 +988,6 @@
         "kenBurns": "Ken Burns",
         "key": "Key",
         "keyboardShortcut": "Keyboard Shortcut",
-        "holdDownShortcutKeyToRepeatAction": "Hold down shortcut key to repeat action.",
         "keyboardShortcuts": "Keyboard Shortcuts",
         "keyframe": "Keyframe",
         "keywordEditorNotOpened": "The Keyword Editor could not be opened.",
