Tweaked the Settings Preferences panel wording

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1409,7 +1409,7 @@
         "setIncrementalNumberMessage": "What would you like to set the Incremental Number to?",
         "setPlayerBackgroundTo": "Set Player Background to",
         "settings": "Settings",
-        "settingsDescription": "In a future release of CommandPost we will have a proper import/export feature for settings. In the meantime...",
+        "settingsDescription": "In a future release of CommandPost we will have a proper import/export feature for settings.<br />In the meantime you can manually copy and paste settings between machines via Finder.<br />You can also setup a sym-link so that the settings folder points to a Dropbox or iCloud Drive folder allowing you to share settings between machines.",
         "setupTitle": "CommandPost Setup",
         "setupWatchFolders": "Setup Watch Folders",
         "setViewerTo": "Set Viewer to",
