--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -315,6 +315,7 @@
         "core_watchfolders_manager_label": "Manager: Watch Folders",
         "core_watchfolders_menuitem_label": "Watch Folder Menu Item",
         "cpAddNoteToSelectedClips_title": "Add Note to Selected Clip(s)",
+        "core_console_applications_label": "Console: Applications",
         "cpAllowTasksDuringPlayback_title": "Toggle Rendering During Playback",
         "cpAudioEffect1_title": "Apply Audio Effect 1",
         "cpAudioEffect2_title": "Apply Audio Effect 2",
@@ -882,6 +883,7 @@
         "global_streamDeckbanks_action": "Stream Deck Banks",
         "global_touchbarbanks_action": "Touch Bar Banks",
         "global_widgets_action": "Global Touch Bar Widgets",
+        "global_applications_action": "Applications",
         "glow": "Glow",
         "goTo": "Go to",
         "goToBeginning": "Go to Beginning",
