Renamed the Console to Search Console
- Closes #2055

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -250,6 +250,7 @@
         "core_action_manager_label": "Manager: Actions",
         "core_commands_actions_label": "Commands Actions",
         "core_commands_global_label": "Global Commands",
+        "core_console_applications_label": "Console: Applications",
         "core_console_label": "Console",
         "core_disk_automount_label": "Disk Automount",
         "core_disk_favourites_label": "Disk Favourites",
@@ -315,7 +316,6 @@
         "core_watchfolders_manager_label": "Manager: Watch Folders",
         "core_watchfolders_menuitem_label": "Watch Folder Menu Item",
         "cpAddNoteToSelectedClips_title": "Add Note to Selected Clip(s)",
-        "core_console_applications_label": "Console: Applications",
         "cpAllowTasksDuringPlayback_title": "Toggle Rendering During Playback",
         "cpAudioEffect1_title": "Apply Audio Effect 1",
         "cpAudioEffect2_title": "Apply Audio Effect 2",
@@ -334,7 +334,7 @@
         "cpCenterCursor_title": "Center Cursor on Focussed Window",
         "cpChangeBackupInterval_title": "Change Backup Interval",
         "cpChangeSmartCollectionsLabel_title": "Change Smart Collections Label",
-        "cpConsole_title": "Activate Console",
+        "cpConsole_title": "Activate Search Console",
         "cpCopyWithCustomLabel_title": "Copy with Custom Label",
         "cpCopyWithCustomLabelAndFolder_title": "Copy with Custom Label and Folder",
         "cpCreateMulticamOptimizedMediaOff_title": "Disable Multicam Optimized Media",
@@ -362,7 +362,7 @@
         "cpGenerator7_title": "Apply Generator 7",
         "cpGenerator8_title": "Apply Generator 8",
         "cpGenerator9_title": "Apply Generator 9",
-        "cpGlobalConsole_title": "Activate Global Console",
+        "cpGlobalConsole_title": "Activate Search Console",
         "cpGlobalToggleTouchBar_title": "Toggle Virtual Touch Bar (Global)",
         "cpHighlightBrowserPlayhead_title": "Highlight Playhead",
         "cpHUD_title": "Toggle HUD",
@@ -876,6 +876,7 @@
         "getCommandPostPushoverAPIKey": "Create Application API Key",
         "getProwlAccount": "Signup for a Prowl Account",
         "global": "Global",
+        "global_applications_action": "Applications",
         "global_cmds_action": "Global Commands",
         "global_command_group": "All Applications",
         "global_loupedeckbanks_action": "Loupedeck+ Banks",
@@ -883,7 +884,6 @@
         "global_streamDeckbanks_action": "Stream Deck Banks",
         "global_touchbarbanks_action": "Touch Bar Banks",
         "global_widgets_action": "Global Touch Bar Widgets",
-        "global_applications_action": "Applications",
         "glow": "Glow",
         "goTo": "Go to",
         "goToBeginning": "Go to Beginning",
