--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -252,6 +252,7 @@
         "core_commands_global_label": "Global Commands",
         "core_console_applications_label": "Console: Applications",
         "core_console_label": "Console",
+        "core_console_scripts_label": "Console: Scripts",
         "core_disk_automount_label": "Disk Automount",
         "core_disk_favourites_label": "Disk Favourites",
         "core_helpandsupport_credits_label": "Help & Support: Credits",
@@ -881,6 +882,7 @@
         "global_command_group": "All Applications",
         "global_loupedeckbanks_action": "Loupedeck+ Banks",
         "global_midibanks_action": "MIDI Banks",
+        "global_scripts_action": "AppleScript",
         "global_streamDeckbanks_action": "Stream Deck Banks",
         "global_touchbarbanks_action": "Touch Bar Banks",
         "global_widgets_action": "Global Touch Bar Widgets",
