Renamed "Caffeinate" to "Prevent Mac from Sleeping"
- Closes #2056

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -156,7 +156,6 @@
         "buttonLabel": "Button Label",
         "buttonPress": "Button Press",
         "buttons": "Buttons",
-        "caffeinate": "Caffeinate",
         "cancel": "Cancel",
         "center": "Center",
         "changeBrowserClipHeightDown_title": "Browser Clip Height Decrease",
@@ -307,7 +306,7 @@
         "core_tangent_os_sound_label": "Tangent: macOS Sound Controls",
         "core_tangent_os_window_label": "Tangent: Windows Management",
         "core_tangent_prefs_label": "Tangent: Preferences",
-        "core_tools_caffeinate_label": "Caffeinate",
+        "core_tools_caffeinate_label": "Prevent Mac from Sleeping",
         "core_touchbar_banks_label": "Touchbar: Banks",
         "core_touchbar_manager_label": "Manager: Touch Bar",
         "core_touchbar_prefs_label": "Preferences: Touch Bar",
@@ -1268,6 +1267,7 @@
         "premultipliedMix": "Premultiplied Mix",
         "premultipliedMix9": "Premulti",
         "presets": "Presets",
+        "preventMacFromSleeping": "Prevent Mac from Sleeping",
         "previous": "Previous",
         "privacy": "Privacy",
         "problemProcessingCSV": "There was a problem processing the CSV file. Are you sure it's valid?",
