Added action to "Set Camera LUT to None"
- `MenuButton:selectItemMatching()` no longer selects an item if it’s
already selected
- Closes #2039

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -723,6 +723,7 @@
         "finalcutpro_import_ignorecard_label": "Ignore Cards",
         "finalcutpro_import_preferences_label": "Import Preferences",
         "finalcutpro_inspector_audio_label": "Inspector: Audio",
+        "finalcutpro_inspector_info_label": "Inspector: Info",
         "finalcutpro_inspector_show_label": "Inspector: Additional Actions",
         "finalcutpro_inspector_text_label": "Inspector: Text",
         "finalcutpro_inspector_video_label": "Inspector: Video",
@@ -1408,6 +1409,7 @@
         "sendToFinalCutPro": "Send to Final Cut Pro",
         "sendToPasteboard": "Send To Pasteboard",
         "setBrowserDurationTo": "Set Browser Duration to",
+        "setCameraLUTToNone": "Set Camera LUT to None",
         "setFilenamePrefix": "Set Filename Prefix",
         "setIncrementalNumber": "Set Incremental Number",
         "setIncrementalNumberError": "This value looks incorrect. Please enter a number and try again.",
