--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1421,6 +1421,7 @@
         "setupTitle": "CommandPost Setup",
         "setupWatchFolders": "Setup Watch Folders",
         "setViewerTo": "Set Viewer to",
+        "setVolumeTo": "Set Volume to",
         "seven": "7",
         "shadows": "Shadows",
         "shadows2": "SD",
