Cleaned up command action subtext

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -158,6 +158,7 @@
         "buttonPress": "Button Press",
         "buttons": "Buttons",
         "cancel": "Cancel",
+        "category": "Category",
         "center": "Center",
         "changeBrowserClipHeightDown_title": "Browser Clip Height Decrease",
         "changeBrowserClipHeightUp_title": "Browser Clip Height Increase",
@@ -221,7 +222,6 @@
         "colorWheel4": "Colr",
         "colorWheels": "Color Wheels",
         "colorWheels_group": "Color Wheels",
-        "commandChoiceSubText": "Command: %{group}",
         "commandEditorShortcut": "Command Editor Shortcut",
         "commandLineTool": "Command Line Tool",
         "commandPost_group": "CommandPost",
