Added missing Plugin Label

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -820,6 +820,7 @@
         "finalcutpro_timeline_preferences_label": "Timeline: Preferences",
         "finalcutpro_timeline_renameclip_label": "Timeline: Rename Clip",
         "finalcutpro_timeline_selectalltimelineclips_label": "Timeline: Select All Timeline Clips",
+        "finalcutpro_timeline_speed_label": "Timeline: Speed Actions",
         "finalcutpro_timeline_titles_label": "Timeline: Titles",
         "finalcutpro_timeline_transcode_label": "Timeline: Transcode",
         "finalcutpro_timeline_transitions_label": "Timeline: Transitions",
