Added handler to support menu items for any application
- Closes #2067

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -270,6 +270,7 @@
         "core_menu_helpandsupport_commandpost_label": "Menubar: CommandPost Help & Support",
         "core_menu_helpandsupport_label": "Menubar: Help & Support Section",
         "core_menu_manager_label": "Manager: Menubar",
+        "core_menu_menuaction_label": "Menubar: Menu Action",
         "core_menu_preferences_label": "Menubar: Preferences",
         "core_menu_quit_label": "Menubar: Quit",
         "core_menu_restart_label": "Menubar: Restart",
@@ -884,6 +885,7 @@
         "global_cmds_action": "Global Commands",
         "global_command_group": "All Applications",
         "global_loupedeckbanks_action": "Loupedeck+ Banks",
+        "global_menuactions_action": "Active Application Menu Items",
         "global_midibanks_action": "MIDI Banks",
         "global_scripts_action": "AppleScript",
         "global_streamDeckbanks_action": "Stream Deck Banks",
