Added Browser Batch Rename HUD
- Added `cp.apple.finalcutpro.content.Clip:setTitle(title)`
- Added `cp.tools.replace(text, old, new)`
- Closes #1983

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -123,6 +123,9 @@
         "batchExportNotShowing": "Unable to show the Export Dialog, which has aborted the Batch Export.\n\nPlease try again.",
         "batchExportProxyFilesDetected": "Proxy files were detected, which has aborted the Batch Export.\n\nProxy files can be ignored via the Batch Export Preferences if required.",
         "batchExportUnexpectedAlert": "An unexpected alert appeared while opening the Export dialog.\n\nPlease try again.",
+        "batchRename": "Batch Rename",
+        "batchRenameBrowserFail": "The Batch Rename tool could not open the Browser.\n\nPlease open the Browser and try again.",
+        "batchRenameFailed": "Batch Rename Failed",
         "behind": "Behind",
         "behind9": "Behind",
         "below": "Below",
@@ -994,6 +997,7 @@
         "justifyLastCentre_title": "Justify last centre",
         "justifyLastLeft_title": "Justify last left",
         "justifyLastRight_title": "Justify last right",
+        "keepOriginalValue": "Keep Original Value",
         "kenBurns": "Ken Burns",
         "key": "Key",
         "keyboardShortcut": "Keyboard Shortcut",
@@ -1543,6 +1547,7 @@
         "subtract9": "Subtract",
         "subtractive": "Subtractive",
         "success": "Success",
+        "suffix": "Suffix",
         "suggestCompressorFeatureToApple": "Suggest Compressor Feature to Apple",
         "suggestFinalCutProFeatureToApple": "Suggest Final Cut Pro Feature to Apple",
         "suggestMotionFeatureToApple": "Suggest Motion Feature to Apple",
