Added text pasteboard history actions to the Search Console
- Closes #2072

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -894,6 +894,7 @@
         "global_streamDeckbanks_action": "Stream Deck Banks",
         "global_touchbarbanks_action": "Touch Bar Banks",
         "global_widgets_action": "Global Touch Bar Widgets",
+        "global_pasteboard_action": "Text Pasteboard History",
         "glow": "Glow",
         "goTo": "Go to",
         "goToBeginning": "Go to Beginning",
@@ -1443,6 +1444,7 @@
         "shareDetails_Youku": "Type: Youku\nLogin: %{login}\nTitle: %{title}",
         "shareDetails_youtube": "Type: YouTube\nLogin: %{login}\nTitle: %{title}",
         "sharedPasteboardHistory": "Shared Pasteboard History",
+        "pasteboardHistory": "Pasteboard History",
         "sharedPasteboardPathMissing": "The Shared Pasteboard path no longer exists. Would you like to select a new location?",
         "sharedPasteboardRootFolder": "Shared Pasteboard Root Folder",
         "shareFailed": "Share Failed",
