Added Screen Capture Actions
- Moved Text Pasteboard History from Core to Finder plugins.
- Closes #2073

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -161,6 +161,16 @@
         "buttonPress": "Button Press",
         "buttons": "Buttons",
         "cancel": "Cancel",
+        "captureInteractive": "Capture Interactive",
+        "captureInteractiveDescription": "Draw a rectangle to capture",
+        "captureInteractiveToClipboard": "Capture Interactive to Clipboard",
+        "captureInteractiveToClipboardDescription": "Draw a rectangle to capture to the clipboard",
+        "captureMenu": "Capture Menu",
+        "captureMenuDescription": "Show macOS screen capture menu",
+        "captureScreen": "Capture Screen",
+        "captureScreenDescription": "Capture the current screen",
+        "captureScreenToClipboard": "Capture Screen to Clipboard",
+        "captureScreenToClipboardDescription": "Capture the current screen to the clipboard",
         "category": "Category",
         "center": "Center",
         "changeBrowserClipHeightDown_title": "Browser Clip Height Decrease",
@@ -721,6 +731,7 @@
         "finalcutpro_hud_panels_minimise_label": "HUD: Minimise Panel",
         "finalcutpro_hud_panels_notes_label": "HUD: Notes Panel",
         "finalcutpro_hud_panels_pasteboard_label": "HUD: Pasteboard Panel",
+        "finalcutpro_hud_panels_rename_label": "HUD: Batch Rename",
         "finalcutpro_hud_panels_search_label": "HUD: Search Panel",
         "finalcutpro_hud_panels_tenbuttons_label": "HUD: 10 Buttons",
         "finalcutpro_hud_panels_twelvebuttons_label": "HUD: 12 Buttons",
@@ -850,9 +861,11 @@
         "find": "Find",
         "finder": "Finder",
         "finder_dateandtime_label": "Finder: Date & Time",
+        "finder_pasteboard_history_label": "Text Pasteboard History",
         "finder_pasteboard_label": "Finder: Pasteboard Tools",
         "finder_preferences_panel_label": "Preferences Panel: Finder",
         "finder_preferences_powerchime_label": "Power Chime Preference",
+        "finder_screencapture_label": "Screen Capture Actions",
         "finder_texttools_label": "Text Tools",
         "finder_window_label": "Window Management",
         "findNext": "Find Next",
@@ -890,11 +903,12 @@
         "global_loupedeckbanks_action": "Loupedeck+ Banks",
         "global_menuactions_action": "Active Application Menu Items",
         "global_midibanks_action": "MIDI Banks",
+        "global_pasteboard_action": "Text Pasteboard History",
+        "global_screencapture_action": "Screen Capture",
         "global_scripts_action": "AppleScript",
         "global_streamDeckbanks_action": "Stream Deck Banks",
         "global_touchbarbanks_action": "Touch Bar Banks",
         "global_widgets_action": "Global Touch Bar Widgets",
-        "global_pasteboard_action": "Text Pasteboard History",
         "glow": "Glow",
         "goTo": "Go to",
         "goToBeginning": "Go to Beginning",
@@ -1206,6 +1220,7 @@
         "pasteboard": "Pasteboard",
         "pasteboardBuffer": "Pasteboard Buffer",
         "pasteboardEditor": "Pasteboard Editor",
+        "pasteboardHistory": "Pasteboard History",
         "pasteboardHistory_TimelineEmpty": "Unable to Paste into Timeline",
         "pasteboardHistory_TimelineEmptyInfo": "Nothing is currently loaded into the Timeline.",
         "pasteboardManager_CopyDisabled": "Unable to Copy.",
@@ -1444,7 +1459,6 @@
         "shareDetails_Youku": "Type: Youku\nLogin: %{login}\nTitle: %{title}",
         "shareDetails_youtube": "Type: YouTube\nLogin: %{login}\nTitle: %{title}",
         "sharedPasteboardHistory": "Shared Pasteboard History",
-        "pasteboardHistory": "Pasteboard History",
         "sharedPasteboardPathMissing": "The Shared Pasteboard path no longer exists. Would you like to select a new location?",
         "sharedPasteboardRootFolder": "Shared Pasteboard Root Folder",
         "shareFailed": "Share Failed",
