--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -303,6 +303,7 @@
         "core_preferences_panels_plugins_label": "Preferences Panel: Plugins",
         "core_preferences_panels_scripting_label": "Preferences Panel: Scripting",
         "core_preferences_panels_settings_label": "Preferences: Settings Panel",
+        "core_preferences_panels_snippets_label": "Preferences Panel: Snippets",
         "core_preferences_panels_tangent_label": "Preferences Panel: Tangent",
         "core_preferences_updates_label": "Preferences: Updates",
         "core_setup_label": "Manager: Setup",
@@ -626,8 +627,10 @@
         "errorWritingToPasteboard": "There was an error writing to the Pasteboard.",
         "eventViewer": "Event Viewer",
         "exactMatch": "Exact Match",
+        "examples": "Examples",
         "exclusion": "Exclusion",
         "exclusion9": "Exclusion",
+        "executeLuaCodeSnippet": "Execute Lua Code Snippet",
         "expandAudio": "Expand Audio",
         "exposure": "Exposure",
         "extendEdit": "Extend Edit",
@@ -1163,6 +1166,7 @@
         "normal9": "Normal",
         "noSelectedClipsInBrowser": "No clips selected in the browser.\n\nPlease select at least one clip and try again.",
         "noSelectedClipsInTimeline": "No clips selected in the timeline.\n\nPlease select at least one clip and try again.",
+        "noSnippetExists": "Please create a new Snippet before attempting to execute any code.",
         "noteCC": "Note/CC",
         "noteOff": "Note Off",
         "noteOn": "Note On",
@@ -1417,6 +1421,7 @@
         "selectedColumnNotShown": "The selected column could not be shown.",
         "selectedColumnNotShownDescription": "Please make sure the notes column is visible and try again.",
         "selectedControl": "Selected Control",
+        "selectedSnippet": "Selected Snippet",
         "selectFolderToWatch": "Please select a folder to watch:",
         "selectLeftAudioEdge": "Select Left Audio Edge",
         "selectLeftEdge": "Select Left Edge",
@@ -1530,6 +1535,13 @@
         "sixtyHz": "60Hz",
         "skip": "Skip",
         "smoothCam": "SmoothCam",
+        "snippetAlreadyExists": "A Snippet with this name already exists.",
+        "snippetEnterLabel": "Please enter a unique label for the snippet:",
+        "snippetError": "The following error occurred when executing this snippet",
+        "snippetExecuteError": "The Snippet could not be executed successfully.",
+        "snippets": "Snippets",
+        "snippetsDescription": "Code Snippets are simple Lua scripts, that can be easily thrown together, shared around, and triggered via actions.<br />For example, a snippet can be triggered via the Search Console. This allows you to quickly code things without creating a plugin.",
+        "snippetUniqueName": "Please enter a new unique label and try again.",
         "softLight": "Soft Light",
         "softLight9": "SoftLight",
         "softness": "Softness",
