Added Korean Translation
- Updated other languages
- Closes #2034

--- a/src/extensions/languages/Russian.json
+++ b/src/extensions/languages/Russian.json
@@ -61,6 +61,7 @@
         "appName": "Командный пункт",
         "appVersion": "Версия",
         "appearance": "Внешность",
+        "appendSelectedTitleTextwithPasteboardContents": "Добавить выбранный текст заголовка с помощью содержимого картона",
         "apple": "Apple",
         "appleBugReporter": "Apple Bug Reporter",
         "appleFeedbackAssistant": "Помощник по обратной связи Apple",
@@ -70,6 +71,7 @@
         "applyColorCorrectionFromPreviousClip": "Применить цветокоррекцию из предыдущего клипа",
         "applyColorCorrectionFromThreeClipsBack": "Применить цветокоррекцию с трех клипов назад",
         "applyColorCorrectionFromTwoClipsBack": "Применить цветокоррекцию с двух клипов назад",
+        "applyKeywordFromPasteboard": "Применить ключевое слово из картона",
         "applyTopDeviceToAll": "Применить верхнее устройство для всех",
         "areYouConnectedToTheInternet": "Вы действительно подключены к Интернету?",
         "areYouSureTheXMLIsValid": "Вы уверены, что XML действителен?",
@@ -114,6 +116,7 @@
         "bassReduce9": "Бас -",
         "batchExport": "Пакетный экспорт",
         "batchExportActiveTimeline": "Пакетный экспорт активной временной шкалы",
+        "batchExportBackgroundTasksDetected": "Обнаружены неполные фоновые задачи, которые прервали пакетный экспорт.\n\nФоновые задачи можно игнорировать в настройках пакетного экспорта, если это необходимо.",
         "batchExportComplete": "Batch Export теперь завершен. Выбранные клипы добавлены в очередь рендеринга.",
         "batchExportCompressorComplete": "Пакетный экспорт завершен.\n\nВыбранные клипы были добавлены в ваш пакет компрессора, готовый к обработке.",
         "batchExportDestinationDisabled": "Целевое назначение отключено.",
@@ -126,6 +129,9 @@
         "batchExportNotShowing": "Не удалось показать диалоговое окно экспорта",
         "batchExportProxyFilesDetected": "Были обнаружены файлы прокси, которые прервали пакетный экспорт.\n\nПрокси-файлы могут быть проигнорированы с помощью опций пакетного экспорта, если это необходимо.",
         "batchExportUnexpectedAlert": "Неожиданное предупреждение при открытии диалогового окна «Экспорт».",
+        "batchRename": "Пакетное переименование",
+        "batchRenameBrowserFail": "Средству пакетного переименования не удалось открыть браузер.\n\nПожалуйста, откройте браузер и попробуйте снова.",
+        "batchRenameFailed": "Пакетное переименование не удалось",
         "behind": "Позади",
         "behind9": "Позади",
         "below": "Ниже",
@@ -162,6 +168,17 @@
         "buttons": "Кнопки",
         "caffeinate": "Caffeinate",
         "cancel": "Отмена",
+        "captureInteractive": "Захват Интерактивный",
+        "captureInteractiveDescription": "Нарисуйте прямоугольник, чтобы захватить",
+        "captureInteractiveToClipboard": "Захватить интерактив в буфер обмена",
+        "captureInteractiveToClipboardDescription": "Нарисуйте прямоугольник для захвата в буфер обмена",
+        "captureMenu": "Меню захвата",
+        "captureMenuDescription": "Показать меню захвата экрана macOS",
+        "captureScreen": "Сделать скриншот",
+        "captureScreenDescription": "Захватить текущий экран",
+        "captureScreenToClipboard": "Захват экрана в буфер обмена",
+        "captureScreenToClipboardDescription": "Захватить текущий экран в буфер обмена",
+        "category": "категория",
         "center": "Центр",
         "changeBrowserClipHeightDown_title": "Уменьшение высоты клипа браузера",
         "changeBrowserClipHeightUp_title": "Увеличение высоты клипа браузера",
@@ -252,12 +269,15 @@
         "controlFCPUIElementAbsolute": "Элемент интерфейса пользователя Final Cut Pro (абсолютный)",
         "controlFCPUIElementRelative": "Элемент пользовательского интерфейса Final Cut Pro (относительный)",
         "controlFCPUIElementRelativeNote": "Наведите указатель мыши на элемент пользовательского интерфейса, удерживайте CONTROL, затем отрегулируйте MIDI-регулятор / фейдер для регистрации.",
+        "copyTitleTextContentsToPasteboard": "Копировать текст заголовка в картон",
         "copyToFinalCutProPasteboardBuffer": "Скопируйте в Final Cut Pro буфер для картона %{id}",
         "core_accessibility_label": "Доступные разрешения",
         "core_action_manager_label": "Менеджер: Действия",
         "core_commands_actions_label": "Действия команды",
         "core_commands_global_label": "Глобальные команды",
+        "core_console_applications_label": "Консоль: Приложения",
         "core_console_label": "Консоль",
+        "core_console_scripts_label": "Консоль: Скрипты",
         "core_disk_automount_label": "Disk Automount",
         "core_disk_favourites_label": "Избранное диска",
         "core_helpandsupport_credits_label": "Помощь и поддержка: Кредиты",
@@ -275,6 +295,7 @@
         "core_menu_helpandsupport_commandpost_label": "Menubar: Справка и поддержка CommandPost",
         "core_menu_helpandsupport_label": "Раздел: Раздел справки и поддержки",
         "core_menu_manager_label": "Менеджер: Menubar",
+        "core_menu_menuaction_label": "Менубар: меню действий",
         "core_menu_preferences_label": "Менюбар: Настройки",
         "core_menu_quit_label": "Менубар: Выйти",
         "core_menu_restart_label": "Менубар: перезагрузка",
@@ -295,6 +316,7 @@
         "core_preferences_panels_scripting_label": "Панель настроек: Сценарии",
         "core_preferences_panels_settings_label": "Предпочтения: Панель настроек",
         "core_preferences_panels_shortcuts_label": "Панель настроек: ярлыки",
+        "core_preferences_panels_snippets_label": "Панель настроек: Фрагменты",
         "core_preferences_panels_tangent_label": "Панель настроек: Tangent",
         "core_preferences_updates_label": "Настройки: Обновления",
         "core_setup_label": "Менеджер: настройка",
@@ -314,6 +336,7 @@
         "core_tangent_os_sound_label": "Тангенс: контрольные элементы macOS",
         "core_tangent_os_window_label": "Tangent: Управление Windows",
         "core_tangent_prefs_label": "Тангенс: Предпочтения",
+        "core_tools_caffeinate_label": "Предотвратить Mac от сна",
         "core_touchbar_banks_label": "Сенсорная панель: банки",
         "core_touchbar_manager_label": "Менеджер: Touch Bar",
         "core_touchbar_prefs_label": "Предпочтения: сенсорная панель",
@@ -627,8 +650,10 @@
         "errorWritingToPasteboard": "Произошла ошибка при записи в Картон.",
         "eventViewer": "Просмотрщик событий",
         "exactMatch": "Полное совпадение",
+        "examples": "Примеры",
         "exclusion": "исключение",
         "exclusion9": "исключение",
+        "executeLuaCodeSnippet": "Выполнить фрагмент кода Lua",
         "expandAudio": "Развернуть аудио",
         "exposure": "Воздействие",
         "extendEdit": "Расширить редактирование",
@@ -742,6 +767,7 @@
         "finalcutpro_hud_panels_minimise_label": "HUD: свернуть панель",
         "finalcutpro_hud_panels_notes_label": "HUD: панель заметок",
         "finalcutpro_hud_panels_pasteboard_label": "HUD: Панель из картона",
+        "finalcutpro_hud_panels_rename_label": "HUD: Пакетное переименование",
         "finalcutpro_hud_panels_search_label": "HUD: панель поиска",
         "finalcutpro_hud_panels_tenbuttons_label": "HUD: 10 кнопок",
         "finalcutpro_hud_panels_twelvebuttons_label": "HUD: 12 кнопок",
@@ -749,6 +775,7 @@
         "finalcutpro_import_ignorecard_label": "Игнорировать карты",
         "finalcutpro_import_preferences_label": "Параметры импорта",
         "finalcutpro_inspector_audio_label": "Инспектор: Аудио",
+        "finalcutpro_inspector_info_label": "Инспектор: Информация",
         "finalcutpro_inspector_show_label": "Инспектор: Дополнительные действия",
         "finalcutpro_inspector_text_label": "Инспектор: Текст",
         "finalcutpro_inspector_video_label": "Инспектор: Видео",
@@ -837,12 +864,14 @@
         "finalcutpro_timeline_mousezoom_label": "Сроки: мышь Zoom",
         "finalcutpro_timeline_movetoplayhead_label": "Хронология: переход в Playhead",
         "finalcutpro_timeline_multicam_label": "Временная шкала: Multicam",
+        "finalcutpro_timeline_navigation_label": "Хронология: навигация",
         "finalcutpro_timeline_playback_label": "Сроки: воспроизведение",
         "finalcutpro_timeline_playhead_label": "Сроки: Playhead",
         "finalcutpro_timeline_pluginactions_label": "Временная шкала: действия плагина",
         "finalcutpro_timeline_preferences_label": "Сроки: Предпочтения",
         "finalcutpro_timeline_renameclip_label": "Хронология: переименовать клип",
         "finalcutpro_timeline_selectalltimelineclips_label": "Временная шкала: выберите все клипы временной шкалы",
+        "finalcutpro_timeline_speed_label": "Хронология: скорость действий",
         "finalcutpro_timeline_stabilization_label": "Инспектор: Стабилизация",
         "finalcutpro_timeline_titles_label": "Сроки: заголовки",
         "finalcutpro_timeline_transcode_label": "Хронология: Транскод",
@@ -866,15 +895,18 @@
         "findPrevious": "Найти предыдущий",
         "finder": "искатель",
         "finder_dateandtime_label": "Finder: дата и время",
+        "finder_pasteboard_history_label": "История картона",
         "finder_pasteboard_label": "Finder: Инструменты для картона",
         "finder_preferences_panel_label": "Панель настроек: Finder",
         "finder_preferences_powerchime_label": "Предпочтение Power Chime",
+        "finder_screencapture_label": "Действия захвата экрана",
         "finder_texttools_label": "Текстовые инструменты",
         "finder_window_label": "Управление окнами",
         "fit": "Поместиться",
         "five": "5",
         "flat": "Плоский",
         "flat9": "Плоский",
+        "focusOnTitleTextInInspector": "Сосредоточьтесь на тексте заголовка в инспекторе",
         "folder": "скоросшиватель",
         "font": "Шрифт",
         "forward": "Вперед",
@@ -897,10 +929,15 @@
         "getCommandPostPushoverAPIKey": "Создать ключ API приложения",
         "getProwlAccount": "Регистрация для учетной записи Prowl",
         "global": "Глобальный",
+        "global_applications_action": "Приложения",
         "global_cmds_action": "Глобальные команды",
         "global_command_group": "Все приложения",
         "global_loupedeckbanks_action": "Лупедка + Банки",
+        "global_menuactions_action": "Активные пункты меню приложения",
         "global_midibanks_action": "MIDI-банки",
+        "global_pasteboard_action": "История картона",
+        "global_screencapture_action": "Скриншот",
+        "global_scripts_action": "AppleScript",
         "global_streamDeckbanks_action": "Потоковые банки",
         "global_touchbarbanks_action": "Touch Bar Banks",
         "global_widgets_action": "Глобальные виджеты штрих-кодов",
@@ -938,8 +975,11 @@
         "highlights4": "Hlgt",
         "histogram": "Гистограмма",
         "historyIsEmpty": "История пуста",
+        "holdDownShortcutKeyToRepeatAction": "Удерживайте клавишу быстрого вызова, чтобы повторить действие.",
         "horizontal": "горизонтальный",
         "horizontal4": "Horz",
+        "horizontalTimelineScroll": "Горизонтальная шкала времени",
+        "horizontalTimelineScrollDescription": "Прокручивает временную шкалу по горизонтали, используя 7-битные или 14-битные MIDI-команды.",
         "howCanWeHelp": "Как мы можем вам помочь?",
         "hud": "HUD",
         "hudButtonItem": "Кнопка %{count} (%{title})",
@@ -957,6 +997,7 @@
         "icon": "Значок",
         "identification": "Идентификация",
         "ignore": "игнорировать",
+        "ignoreBackgroundTasks": "Игнорировать предупреждение о фоновых задачах",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "Игнорировать клавишу ESC, когда Final Cut Pro является полноэкранным",
         "ignoreInsertedCameraCards": "Игнорировать вставленные карты камеры",
         "ignoreInvalidCaptions": "Игнорировать предупреждение о недействительных титрах",
@@ -1007,8 +1048,10 @@
         "justifyLastCentre_title": "Обосновать последний центр",
         "justifyLastLeft_title": "Оправдать последний оставленный",
         "justifyLastRight_title": "Обосновать последнее право",
+        "keepOriginalValue": "Сохранить исходное значение",
         "kenBurns": "Кен Бернс",
         "key": "ключ",
+        "keyboardShortcut": "Сочетание клавиш",
         "keyboardShortcuts": "Горячие клавиши",
         "keyframe": "Keyframe",
         "keywordEditorNotOpened": "Не удалось открыть редактор ключевых слов.",
@@ -1158,6 +1201,7 @@
         "noRatingsOrKeywords": "Нет рейтинга или ключевых слов",
         "noSelectedClipsInBrowser": "Клипы не выбраны в браузере.\n\nПожалуйста, выберите хотя бы один клип и попробуйте снова.",
         "noSelectedClipsInTimeline": "Клипы не выбраны на временной шкале.\n\nПожалуйста, выберите хотя бы один клип и попробуйте снова.",
+        "noSnippetExists": "Пожалуйста, создайте новый фрагмент, прежде чем пытаться выполнить любой код.",
         "noTitleShortcut": "Для этого ярлыка нет заголовка.\n\nВы можете назначить ярлыки через панель меню CommandPost.",
         "noiseRemoval": "Удаление шума",
         "none": "Никто",
@@ -1196,6 +1240,7 @@
         "openMessages": "Открыть сообщения",
         "openPrivacyPolicy": "Открыть политику конфиденциальности",
         "openProjectAfterFind": "Открытый проект после поиска",
+        "openRecentProjectStartingWith": "Открыть недавний проект, начиная с",
         "openTangentMapper": "Открыть карту касания",
         "openUserSettingsFolder": "Открыть папку настроек пользователя",
         "openVoiceOverUtility": "Открыть голосовую утилиту",
@@ -1221,6 +1266,7 @@
         "pasteboard": "картонный",
         "pasteboardBuffer": "Буфер для картона",
         "pasteboardEditor": "Редактор картона",
+        "pasteboardHistory": "История картона",
         "pasteboardHistory_TimelineEmpty": "Невозможно вставить в хронологию",
         "pasteboardHistory_TimelineEmptyInfo": "В настоящее время ничто не загружается в хронологию.",
         "pasteboardManager_CopyDisabled": "Невозможно скопировать.",
@@ -1292,6 +1338,7 @@
         "premultipliedMix": "Предварительно умноженный микс",
         "premultipliedMix9": "Premulti",
         "presets": "Пресеты",
+        "preventMacFromSleeping": "Предотвратить Mac от сна",
         "previous": "предыдущий",
         "privacy": "Конфиденциальность",
         "problemProcessingCSV": "При обработке файла CSV возникла проблема. Вы уверены, что это действительно?",
@@ -1329,6 +1376,7 @@
         "replace": "замещать",
         "replaceAll": "Заменить все",
         "replaceExistingFiles": "Заменить существующие файлы",
+        "replaceSelectedTitleTextwithPasteboardContents": "Заменить выбранный текст заголовка содержимым картона",
         "replaceSpaceWithUnderscore": "Замена пространств с помощью символов подчеркивания",
         "reportATranslationMistake": "Сообщить о переводе",
         "reportCompressorBugToApple": "Сообщить об ошибке компрессора в Apple",
@@ -1429,6 +1477,7 @@
         "selectedColumnNotShown": "Выбранный столбец не может быть показан.",
         "selectedColumnNotShownDescription": "Пожалуйста, убедитесь, что столбец заметок виден, и попробуйте снова.",
         "selectedControl": "Выбранный элемент управления",
+        "selectedSnippet": "Выбранный фрагмент",
         "selfShadows": "Я Тени",
         "send": "послать",
         "sendCrashData": "Отправить Crash Data (требуется перезагрузка)",
@@ -1437,12 +1486,15 @@
         "sendToFinalCutPro": "Отправить в Final Cut Pro",
         "sendToPasteboard": "Отправить на картон",
         "setBrowserDurationTo": "Установите Длительность Браузера в",
+        "setCameraLUTToNone": "Установите Camera LUT на None",
         "setFilenamePrefix": "Установить префикс имени файла",
         "setIncrementalNumber": "Установить инкрементный номер",
         "setIncrementalNumberError": "Это значение выглядит некорректно. Введите номер и повторите попытку.",
         "setIncrementalNumberMessage": "Что бы вы хотели установить для Инкрементального номера?",
         "setPlayerBackgroundTo": "Установить фон игрока на",
+        "setSpeedRateTo": "Установите скорость в",
         "setViewerTo": "Установите Viewer на",
+        "setVolumeTo": "Установить громкость на",
         "settings": "Установки",
         "settingsDescription": "В будущем выпуске CommandPost у нас будет соответствующая функция импорта / экспорта настроек. В это время...",
         "setupTitle": "Настройка CommandPost",
@@ -1586,6 +1638,13 @@
         "sixtyHz": "60Гц",
         "skip": "Пропускать",
         "smoothCam": "SmoothCam",
+        "snippetAlreadyExists": "Фрагмент с таким именем уже существует.",
+        "snippetEnterLabel": "Пожалуйста, введите уникальный ярлык для фрагмента:",
+        "snippetError": "Следующая ошибка произошла при выполнении этого фрагмента",
+        "snippetExecuteError": "Фрагмент не может быть успешно выполнен.",
+        "snippetUniqueName": "Пожалуйста, введите новый уникальный ярлык и попробуйте снова.",
+        "snippets": "обрывки",
+        "snippetsDescription": "Фрагменты кода - это простые сценарии Lua, которые можно легко объединять, обмениваться и запускать с помощью действий. <br /> Например, фрагмент можно запускать с помощью консоли поиска. Это позволяет быстро кодировать вещи без создания плагина.",
         "softLight": "Мягкий свет",
         "softLight9": "Мягкий свет",
         "softness": "Мягкость",
@@ -1620,6 +1679,7 @@
         "subtract9": "вычитать",
         "subtractive": "вычитаемый",
         "success": "успех",
+        "suffix": "Суффикс",
         "suggestATranslation": "Предложить новый язык",
         "suggestCompressorFeatureToApple": "Предложить функцию компрессора Apple",
         "suggestFinalCutProFeatureToApple": "Предложить функцию Final Cut Pro для Apple",
@@ -1653,6 +1713,7 @@
         "timeline": "График",
         "timelineBatchExportBeginMessage": "Этот инструмент пакетного экспорта по шкале времени использует автоматизацию для индивидуального выбора каждого клипа, а затем запускает пункт меню «Файл> Поделиться».\n\nПожалуйста, не перемещайте мышь и не касайтесь клавиатуры, пока этот процесс не будет завершен.",
         "timelineBatchExportCompressorBeginMessage": "Этот инструмент пакетного экспорта по шкале времени использует автоматизацию для индивидуального выбора каждого клипа, а затем вызывает пункт меню «Файл> Отправить в компрессор».\n\nПожалуйста, не перемещайте мышь и не касайтесь клавиатуры, пока этот процесс не будет завершен.",
+        "timelineClipHeight": "Высота клипа на временной шкале",
         "timelineCouldNotBeShown": "Временная шкала не может быть показана.",
         "timelineHistory": "История хронологии",
         "timelineZoom": "Временная шкала Zoom",
@@ -1740,6 +1801,8 @@
         "version": "Версия",
         "vertical": "вертикальный",
         "vertical4": "Vert",
+        "verticalTimelineScroll": "Вертикальная шкала времени",
+        "verticalTimelineScrollDescription": "Прокручивает временную шкалу по вертикали, используя 7-битный или 14-битный MIDI.",
         "video": "видео",
         "videoEffect_group": "Видеоэффект",
         "videoWaveform": "Видеоволна",
